DOCS-15340 Balancer Policy redux (#1990)
* DOCS-15340 redux

* updates

* prep

* build errors

* tech feedback

* tech review feedback

* restores original SVG

* tech feedback

* internal review updates

--- a/source/includes/steps-sharding-segmenting-data-by-location-update.yaml
+++ b/source/includes/steps-sharding-segmenting-data-by-location-update.yaml
@@ -127,9 +127,9 @@ level: 4
 ref: sharding_tiered_storage_review
 pre: |
   The next time the :ref:`balancer <sharding-balancing>` runs, it 
-  :ref:`splits <sharding-chunk-split>` chunks where necessary and
-  :ref:`migrates <sharding-chunk-migration>` chunks across the 
-  shards respecting the configured zones.
+  splits chunks where necessary and :ref:`migrates 
+  <sharding-chunk-migration>` chunks across the shards respecting the 
+  configured zones.
   
   Before balancing:
 
