--- a/source/includes/steps-sharding-segmenting-shards.yaml
+++ b/source/includes/steps-sharding-segmenting-shards.yaml
@@ -123,9 +123,8 @@ level: 4
 ref: sharding_tiered_storage_review
 pre: |
   The next time the :ref:`balancer <sharding-balancing>` runs, it 
-  :ref:`splits <sharding-chunk-split>` and
-  :ref:`migrates <sharding-chunk-migration>` chunks across the 
-  shards respecting the configured zones. 
+  :ref:`migrates <sharding-chunk-migration>` data across the shards 
+  respecting the configured zones. 
   
   Once balancing finishes, the shards in the ``robot`` zone only contain
   documents with ``client : robot``, while shards in the ``fruitos`` zone only
