--- a/source/includes/steps-sharding-tiered-hardware-for-varying-slas-update.yaml
+++ b/source/includes/steps-sharding-tiered-hardware-for-varying-slas-update.yaml
@@ -127,9 +127,8 @@ level: 4
 ref: sharding_tiered_storage_review
 pre: |
   The next time the :ref:`balancer <sharding-balancing>` runs, it 
-  :ref:`splits <sharding-chunk-split>` chunks where necessary and
-  :ref:`migrates <sharding-chunk-migration>` chunks across the 
-  shards respecting the configured zones.
+  :ref:`migrates <sharding-chunk-migration>` data across the shards 
+  respecting the configured zones.
   
   Before balancing, the shards in the ``recent`` zone only contained documents
   with ``creation_date`` greater than or equal to ``ISODate("2016-01-01")``,
