--- a/source/includes/steps-sharding-high-availability.yaml
+++ b/source/includes/steps-sharding-high-availability.yaml
@@ -76,9 +76,8 @@ level: 4
 ref: sharding-high-availability-review
 pre: |
   The next time the :ref:`balancer <sharding-balancing>` runs, it 
-  :ref:`splits <sharding-chunk-split>` and
-  :ref:`migrates <sharding-chunk-migration>` chunks across the 
-  shards respecting the tag ranges and tags. 
+  :ref:`migrates <sharding-chunk-migration>` data across the shards 
+  respecting the configured zones.
   
   Once balancing finishes, the shards tagged as ``alfa`` should only
   contain documents with ``datacenter : alfa``, while shards tagged as 
