--- a/source/includes/steps-sharding-tiered-hardware-for-varying-slas.yaml
+++ b/source/includes/steps-sharding-tiered-hardware-for-varying-slas.yaml
@@ -107,9 +107,8 @@ level: 4
 ref: sharding_tiered_storage_review
 pre: |
   The next time the :ref:`balancer <sharding-balancing>` runs, it 
-  :ref:`splits <sharding-chunk-split>` and
-  :ref:`migrates <sharding-chunk-migration>` chunks across the 
-  shards respecting configured zones.
+  splits and :ref:`migrates <sharding-chunk-migration>` chunks across 
+  the shards respecting configured zones.
   
   Once balancing finishes, the shards in the ``recent`` zone should only
   contain documents with ``creation_date`` greater than or equal to
