DOCS-15521 sh.status.partitioned not valid (#2050)
* DOCS-15521 sh.status.partitioned not valid

* DOCS-15521 sh.status.partitioned not valid

* DOCS-15521 sh.status.partitioned not valid

* Review Feedback

* Review feedback

--- a/source/includes/steps-reshard-a-collection.yaml
+++ b/source/includes/steps-reshard-a-collection.yaml
@@ -122,7 +122,7 @@ content: |
            database: {
            _id: '<database>',
            primary: '<shard>',
-           partitioned: true,
+           partitioned: false,
            version: {
              uuid: <uuid>,
              timestamp: <timestamp>,
