DOCSP-26183 replaces :doc: with improved admonitions (#2080)

--- a/source/includes/extracts-views.yaml
+++ b/source/includes/extracts-views.yaml
@@ -21,9 +21,8 @@ content: |
 ---
 ref: views-unsupported-projection-operators
 content: |
-   :method:`~db.collection.find()` operations on views do not support
-   the following :doc:`projection </reference/operator/projection>`
-   operators:
+   :method:`~db.collection.find()` operations on views do not support 
+   the following :ref:`query-projection-operators-top` operators:
 
    - :projection:`$`
    - :projection:`$elemMatch`
