DOCSP-26204 update instances of :doc: pointing to core/index-text with :ref: (#2087)
* DOCSP-26204 update instances of :doc: pointing to core/index-text with :ref:

* internal review feedback

--- a/source/includes/extracts-collation.yaml
+++ b/source/includes/extracts-collation.yaml
@@ -181,7 +181,7 @@ content: |
    The following indexes only support simple binary comparison and do
    not support :ref:`collation <collation>`:
 
-   - :doc:`text </core/index-text>` indexes, 
+   - :ref:`text <index-feature-text>` indexes, 
 
    - :doc:`2d </core/2d>` indexes, and 
 
