--- a/source/includes/extracts-wildcard-indexes.yaml
+++ b/source/includes/extracts-wildcard-indexes.yaml
@@ -86,7 +86,7 @@ content: |
 
   - :doc:`Compound </core/index-compound>`
   - :doc:`TTL </core/index-ttl>`
-  - :doc:`Text </core/index-text>`
+  - :ref:`text <index-feature-text>`
   - :doc:`2d (Geospatial) </core/geospatial-indexes>`
   - :doc:`2dsphere (Geospatial) </core/2dsphere>`
   - :doc:`Hashed </core/index-hashed>`
