DOCSP-26224 replace docs directives pointing to transactions (#2090)
* DOCSP-26224 replace docs directives pointing to transactions

* internal review feedback

--- a/source/includes/extracts-transactions.yaml
+++ b/source/includes/extracts-transactions.yaml
@@ -1,7 +1,7 @@
 ref: transactions-read-pref
 content: |
 
-   :doc:`Multi-document transactions </core/transactions>` that contain
+   :ref:`Multi-document transactions <transactions>` that contain
    read operations must use read preference :readmode:`primary`. All
    operations in a given transaction must route to the same member.
 
@@ -22,7 +22,7 @@ content: |
       
       For additional transactions usage considerations
       (such as runtime limit and oplog size limit), see also
-      :doc:`/core/transactions-production-consideration`.
+      :ref:`<production-considerations>`.
 
 ---
 ref: transactions-intro
@@ -47,7 +47,7 @@ content: |
      multi-document transactions on replica sets.
 
    For details regarding transactions in MongoDB, see the
-   :doc:`/core/transactions` page.
+   :ref:`transactions <transactions>` page.
 
 ---
 ref: transactions-faq
@@ -75,7 +75,7 @@ content: |
      multi-document transactions on replica sets.
 
      For details regarding transactions in MongoDB, see the
-     :doc:`/core/transactions` page.
+     :ref:`transactions <transactions>` page.
 
 ---
 ref: transactions-operations-restrictions
@@ -139,11 +139,11 @@ content: |
       
         .. include:: /includes/extracts/transactions-cross-shard-collection-restriction.rst
 
-   - You cannot write to :doc:`capped </core/capped-collections>`
+   - You cannot write to :ref:`capped <manual-capped-collection>`
      collections. (Starting in MongoDB 4.2)
 
    - You cannot use read concern :readconcern:`"snapshot"` when reading
-     from a :doc:`capped </core/capped-collections>` collection.
+     from a :ref:`capped <manual-capped-collection>` collection.
      (Starting in MongoDB 5.0)
 
    - You cannot read/write to collections in the ``config``, ``admin``,
@@ -191,8 +191,8 @@ content: |
 ref: transactions-supported-operation
 content: |
 
-   |operation| can be used inside :doc:`multi-document transactions
-   </core/transactions>`.
+   |operation| can be used inside :ref:`multi-document transactions
+   <transactions>`.
 
 ---
 ref: transactions-distinct-support
@@ -275,7 +275,7 @@ content: |
 ref: transactions-read-concern-majority
 content: |
    Disabling :readconcern:`"majority"` read concern affects support for
-   :doc:`transactions </core/transactions>` on sharded clusters. Specifically:
+   :ref:`transactions <transactions>` on sharded clusters. Specifically:
 
    - A transaction cannot use read concern :readconcern:`"snapshot"` if
      the transaction involves a shard that has :ref:`disabled read
@@ -285,7 +285,7 @@ content: |
      transaction's read or write operations involves a shard that has
      disabled read concern :readconcern:`"majority"`.
 
-   However, it does not affect :doc:`transactions </core/transactions>`
+   However, it does not affect :ref:`transactions <transactions>`
    on replica sets. For transactions on replica sets, you can specify
    read concern :readconcern:`"majority"` (or :readconcern:`"snapshot"`
    or :readconcern:`"local"` ) for multi-document transactions even if
@@ -402,23 +402,23 @@ content: |
 
    You cannot run transactions on a sharded cluster that has a shard
    with :rsconf:`writeConcernMajorityJournalDefault` set to ``false``
-   (such as a shard with a voting member that uses the :doc:`in-memory
-   storage engine </core/inmemory>`).
+   (such as a shard with a voting member that uses the :ref:`in-memory
+   storage engine <storage-inmemory>`).
 
 ---
 ref: transactions-killop-change
 content: |
 
    Starting in MongoDB 4.2, you cannot specify :dbcommand:`killCursors` as
-   the first operation in a :doc:`transaction </core/transactions>`.
+   the first operation in a :ref:`transaction <transactions>`.
 
 ---
 ref: transactions-capped-collection-change
 content: |
 
-   Starting in MongoDB 4.2, you cannot write to :doc:`capped
-   </core/capped-collections>` collections in :doc:`transactions
-   </core/transactions>`.
+   Starting in MongoDB 4.2, you cannot write to :ref:`capped 
+   <manual-capped-collection>` collections in :ref:`transactions
+   <transactions>`.
 
 ---
 ref: transactions-capped-collection-read-change
@@ -426,7 +426,7 @@ content: |
 
    Starting in MongoDB 5.0, you cannot use read concern
    :readconcern:`"snapshot"` when reading from a
-   :doc:`capped </core/capped-collections>` collection.
+   :ref:`capped <manual-capped-collection>` collection.
 
 ---
 ref: transactions-arbiters
@@ -473,14 +473,14 @@ content: |
 ref: transactions-inmemory-txn-page
 content: |
 
-   Starting in MongoDB 4.2, :doc:`multi-document transactions
-   </core/transactions>` are supported on replica sets and sharded
+   Starting in MongoDB 4.2, :ref:`multi-document transactions
+   <transactions>` are supported on replica sets and sharded
    clusters where:
 
    - the primary uses the WiredTiger storage engine, and
 
-   - the secondary members use either the WiredTiger storage engine or the
-     :doc:`in-memory </core/inmemory>` storage engines.
+   - the secondary members use either the WiredTiger storage engine or 
+     the :ref:`in-memory <storage-inmemory>` storage engines.
 
    In MongoDB 4.0, only replica sets using the WiredTiger storage
    engine supported transactions.
@@ -490,7 +490,7 @@ content: |
       You cannot run transactions on a sharded cluster that has a shard
       with :rsconf:`writeConcernMajorityJournalDefault` set to
       ``false``, such as a shard with a voting member that uses the
-      :doc:`in-memory storage engine </core/inmemory>`.
+      in-memory storage engine.
 
 ---
 ref: transactions-inmemory-storage-page
@@ -499,11 +499,11 @@ content: |
    Starting in MongoDB 4.2, transactions are supported on replica sets
    and sharded clusters where:
 
-   - the primary uses the :doc:`WiredTiger </core/wiredtiger>` storage
+   - the primary uses the :ref:`WiredTiger <storage-wiredtiger>` storage
      engine, and
 
    - the secondary members use either the WiredTiger storage engine or the
-     :doc:`in-memory </core/inmemory>` storage engines.
+     :ref:`in-memory <storage-inmemory>` storage engines.
 
    In MongoDB 4.0, only replica sets using the WiredTiger storage
    engine supported transactions.
@@ -513,7 +513,7 @@ content: |
       You cannot run transactions on a sharded cluster that has a shard
       with :rsconf:`writeConcernMajorityJournalDefault` set to
       ``false``, such as a shard with a voting member that uses the
-      :doc:`in-memory storage engine </core/inmemory>`.
+      :ref:`in-memory storage engine <storage-inmemory>`.
 ---
 ref: transactions-sharded-clusters-commit-writeconcern
 content: |
