--- a/source/includes/extracts-rs-stepdown.yaml
+++ b/source/includes/extracts-rs-stepdown.yaml
@@ -23,7 +23,7 @@ content: |
       original primary resumes normal operation. 
 
       Writes that were in progress when |command-method-name| is run
-      are killed. In-progress :doc:`transactions </core/transactions>`
+      are killed. In-progress :ref:`transactions <transactions>`
       also fail with :ref:`transient-transaction-error` and can be
       retried as a whole.
 
