--- a/source/includes/extracts-collation.yaml
+++ b/source/includes/extracts-collation.yaml
@@ -183,7 +183,7 @@ content: |
 
    - :ref:`text <index-feature-text>` indexes, 
 
-   - :doc:`2d </core/2d>` indexes, and 
+   - :ref:`2d <2d-index>` indexes, and 
 
    - :doc:`geoHaystack </core/geohaystack>` indexes.
 
