DOCSP-26256 replaces views-related doc directives (#2092)

--- a/source/includes/extracts-4.4-changes.yaml
+++ b/source/includes/extracts-4.4-changes.yaml
@@ -229,7 +229,7 @@ content: |
 
    Starting in MongoDB 4.4, you can specify a :operator:`$natural`
    sort when running a :dbcommand:`find` operation against a
-   :doc:`view </core/views>`.
+   :ref:`view <views-landing-page>`.
 ---
 ref: 4.4-changes-drop-in-progress-indexes
 content: |
