--- a/source/includes/extracts-projection.yaml
+++ b/source/includes/extracts-projection.yaml
@@ -155,13 +155,13 @@ content: |
         - Using the array projection operators :projection:`$elemMatch`,
           :projection:`$slice`, specifies the array element(s) to include,
           thereby excluding those elements that do not meet the
-          expressions. (Not available for :doc:`views </core/views>`.)
+          expressions. (Not available for :ref:`views <views-landing-page>`.)
 
       * - ``<field>: <$meta expression>``
 
         - Using the :expression:`$meta` operator expression, specifies the
           inclusion of available :expression:`per-document metadata
-          <$meta>`. (Not available for :doc:`views </core/views>`.)
+          <$meta>`. (Not available for :ref:`views <views-landing-page>`.)
 
 
       * - ``<field>: <aggregation expression>``
@@ -232,7 +232,7 @@ content: |
         - Using the array projection operators :projection:`$elemMatch`,
           :projection:`$slice`, specifies the array element(s) to include,
           thereby excluding those elements that do not meet the
-          expressions. (Not available for :doc:`views </core/views>`.)
+          expressions. (Not available for :ref:`views <views-landing-page>`.)
 
       * - ``<field>: <aggregation expression>``
 
