--- a/source/includes/extracts-views.yaml
+++ b/source/includes/extracts-views.yaml
@@ -4,20 +4,20 @@ content: |
 ---
 ref: views-unsupported-text-search
 content: |
-   :doc:`Views </core/views>` do not support text search.
+   :ref:`Views <views-landing-page>` do not support text search.
 ---
 ref: views-unsupported-mapReduce
 content: |
-   :doc:`Views </core/views>` do not support map-reduce operations.
+   :ref:`Views <views-landing-page>` do not support map-reduce operations.
 ---
 ref: views-unsupported-rename
 content: |
-   You cannot rename :doc:`views </core/views>`.
+   You cannot rename :ref:`views <views-landing-page>`.
 ---
 ref: views-unsupported-geoNear
 content: |
-   :doc:`Views </core/views>` do not support geoNear operations (i.e.
-   :pipeline:`$geoNear` pipeline stage).
+   :ref:`Views <views-landing-page>` do not support geoNear operations 
+   (specifically, the :pipeline:`$geoNear` pipeline stage).
 ---
 ref: views-unsupported-projection-operators
 content: |
@@ -31,7 +31,7 @@ content: |
 ---
 ref: _views-unsupported-projection
 content: |
-   :method:`db.collection.find()` operations on :doc:`views </core/views>` do not support {{projection}} projection operator.
+   :method:`db.collection.find()` operations on :ref:`views <views-landing-page>` do not support {{projection}} projection operator.
 ---
 ref: views-unsupported-projection-$
 inherit:
