--- a/source/includes/extracts-mongos-operations.yaml
+++ b/source/includes/extracts-mongos-operations.yaml
@@ -9,7 +9,7 @@ ref: mongos-operations-wc-drop
 content: |
 
    When issued on a sharded cluster, :binary:`~bin.mongos` converts the
-   :doc:`write concern </reference/write-concern>` of the
+   :ref:`write concern <write-concern>` of the
    :dbcommand:`drop` command and its helper
    :method:`db.collection.drop()` to :writeconcern:`"majority"`.
 ---
@@ -17,7 +17,7 @@ ref: mongos-operations-wc-rename-collection
 content: |
 
    When issued on a sharded cluster, :binary:`~bin.mongos` converts the
-   :doc:`write concern </reference/write-concern>` of the
+   :ref:`write concern <write-concern>` of the
    :dbcommand:`renameCollection` command and its helper
    :method:`db.collection.renameCollection()` to
    :writeconcern:`"majority"`.
@@ -26,7 +26,7 @@ ref: mongos-operations-wc-create
 content: |
 
    When issued on a sharded cluster, :binary:`~bin.mongos` converts the
-   :doc:`write concern </reference/write-concern>` of the
+   :ref:`write concern <write-concern>` of the
    :dbcommand:`create` command and its helper
    :method:`db.createCollection()` to :writeconcern:`"majority"`.
 ---
@@ -34,7 +34,7 @@ ref: mongos-operations-wc-drop-database
 content: |
 
    When issued on a sharded cluster, MongoDB converts the specified
-   :doc:`write concern </reference/write-concern>` to
+   :ref:`write concern <write-concern>` to
    :writeconcern:`"majority"`.
 
 ---
@@ -42,7 +42,7 @@ ref: mongos-operations-wc-shard-collection
 content: |
 
    :binary:`~bin.mongos` uses :writeconcern:`"majority"` for the
-   :doc:`write concern </reference/write-concern>` of the
+   :ref:`write concern <write-concern>` of the
    :dbcommand:`shardCollection` command and its helper
    :method:`sh.shardCollection()`.
 
@@ -68,14 +68,14 @@ ref: mongos-operations-wc-remove-shard
 content: |
 
    :binary:`~bin.mongos` converts the
-   :doc:`write concern </reference/write-concern>` of the
+   :ref:`write concern <write-concern>` of the
    :dbcommand:`removeShard` command to :writeconcern:`"majority"`.
 
 ---
 ref: mongos-operations-wc-fcv
 content: |
    When issued on a sharded cluster, :binary:`~bin.mongos` converts the
-   :doc:`write concern </reference/write-concern>` of the
+   :ref:`write concern <write-concern>` of the
    :dbcommand:`setFeatureCompatibilityVersion` command to :writeconcern:`"majority"`.
 ---
 ref: mongos-operations-wc
