DOCSP-26288 replaces auditing-related doc directives (#2102)
* DOCSP-26288 replaces auditing-realted doc directives

* internal review feedback

* internal review feedback

--- a/source/includes/steps-log-rotate-rename.yaml
+++ b/source/includes/steps-log-rotate-rename.yaml
@@ -32,7 +32,7 @@ action:
   code: |
     db.adminCommand( { logRotate : "server" } )
 post: |
-  If :doc:`auditing </core/auditing>` is enabled, you can specify ``1``
+  If :ref:`auditing <auditing>` is enabled, you can specify ``1``
   to ``logRotate`` (instead of  ``server``) to rotate both the server
   and audit logs at the same time, if desired. The audit log will be
   rotated in the same fashion as the server log, according to the
