DOCPS-26298 updates BSON-related doc directives (#2105)
* DOCPS-26298 updates BSON-related doc directives

* internal review feedback

* internal review feedback

--- a/source/includes/extracts-agg-operators.yaml
+++ b/source/includes/extracts-agg-operators.yaml
@@ -937,7 +937,7 @@ content: |
           <Int64>`.  
 
           Returns boolean ``false`` if the expression resolves to any
-          other :doc:`BSON type </reference/mongodb-extended-json>`,
+          other :ref:`BSON type <bson-types>`,
           ``null``, or a missing field.
 
           .. versionadded:: 4.4
