DOCSP-26321 updates collation-related doc directives (#2112)

--- a/source/includes/extracts-views.yaml
+++ b/source/includes/extracts-views.yaml
@@ -64,7 +64,7 @@ replacement:
 ref: views-collation-behavior
 content: |
 
-   - You can specify a default :doc:`collation </reference/collation>`
+   - You can specify a default :ref:`collation <collation>`
      for a view at creation time. If no collation is specified, the
      view's default collation is the "simple" binary comparison
      collator. That is, the view does not inherit the collection's
@@ -84,7 +84,7 @@ content: |
 
    If performing an aggregation that involves multiple views, such as
    with :pipeline:`$lookup` or :pipeline:`$graphLookup`, the views must
-   have the same :doc:`collation  </reference/collation>`.
+   have the same :ref:`collation <collation>`.
 ---
 ref: views-public-definition
 content: |
