(DOCSP-26328): Migrate changelog script from Python 2 to Python 3 (#2116)
* (DOCSP-26328): Migrate changelog script from Python 2 to Python 3 (#2113)

* update Makefile command and requirements filename (#2114)

--- a/config/changelog_conf.yaml
+++ b/config/changelog_conf.yaml
@@ -6,6 +6,7 @@ groups:
   "Security":
     - Security
     - Queryable Encryption
+    - Field Level Encryption
   "Sharding":
     - Sharding
   "Replication":
