--- a/source/includes/steps-convert-replica-set-enable-sharding.yaml
+++ b/source/includes/steps-convert-replica-set-enable-sharding.yaml
@@ -30,8 +30,8 @@ title:
 stepnum: 3
 ref: enable-sharding-create-index
 pre: |
-    Before sharding a non-empty collection, create an :doc:`index on
-    the shard key </core/sharding-shard-key>`.
+    Before sharding a non-empty collection, create an :ref:`index on
+    the shard key <sharding-shard-key>`.
 action:
   language: sh
   code: |
