--- a/source/includes/extracts-enterprise.yaml
+++ b/source/includes/extracts-enterprise.yaml
@@ -40,15 +40,11 @@ content: |
           manager, follow the package manager instructions for your
           operating system:
 
-          - :doc:`Red Hat Enterprise or CentOS </tutorial/install-mongodb-enterprise-on-red-hat>`
-
-          - :doc:`Ubuntu </tutorial/install-mongodb-enterprise-on-ubuntu>`
-
-          - :doc:`Debian </tutorial/install-mongodb-enterprise-on-debian>`
-
-          - :doc:`SUSE </tutorial/install-mongodb-enterprise-on-suse>`
-
-          - :doc:`Amazon Linux </tutorial/install-mongodb-enterprise-on-amazon>`
+          - :ref:`Red Hat Enterprise or CentOS <install-mdb-enterprise-redhat-centos>`
+          - :ref:`Ubuntu <install-mdb-enterprise-ubuntu>`
+          - :ref:`Debian <install-mdb-enterprise-debian>`
+          - :ref:`SUSE <install-mdb-enterprise-suse>`
+          - :ref:`Amazon Linux <install-mdb-enterprise-amazon>`
 
           During the installation, the package manager will remove the
           community packages; this will not affect the running
@@ -74,15 +70,11 @@ content: |
               directory and, if applicable, the existing configuration
               file.
 
-          - :doc:`Red Hat Enterprise or CentOS </tutorial/install-mongodb-enterprise-on-red-hat-tarball>`
-
-          - :doc:`Ubuntu </tutorial/install-mongodb-enterprise-on-ubuntu-tarball>`
-
-          - :doc:`Debian </tutorial/install-mongodb-enterprise-on-debian-tarball>`
-
-          - :doc:`SUSE </tutorial/install-mongodb-enterprise-on-suse-tarball>`
-
-          - :doc:`Amazon Linux </tutorial/install-mongodb-enterprise-on-amazon-tarball>`
+          - :ref:`Red Hat Enterprise or CentOS <install-mdb-enterprise-redhat-centos-tgz>`
+          - :ref:`Ubuntu <install-mdb-enterprise-ubuntu-tgz>`
+          - :ref:`Debian <install-mdb-enterprise-debian-tgz>`
+          - :ref:`SUSE <install-mdb-enterprise-suse-tgz>`
+          - :ref:`Amazon Linux <install-mdb-enterprise-amazon-tgz>`
 
       - id: windows
         name: Windows
