DOCSP-26416 Updates TTL-related doc directives (#2134)

--- a/source/includes/extracts-wildcard-indexes.yaml
+++ b/source/includes/extracts-wildcard-indexes.yaml
@@ -84,13 +84,13 @@ content: |
   Wildcard indexes do not support the following index types or
   properties:
 
-  - :doc:`Compound </core/index-compound>`
-  - :doc:`TTL </core/index-ttl>`
+  - :ref:`Compound <index-type-compound>`
+  - :ref:`TTL <index-feature-ttl>`
   - :ref:`text <index-feature-text>`
-  - :doc:`2d (Geospatial) </core/geospatial-indexes>`
-  - :doc:`2dsphere (Geospatial) </core/2dsphere>`
-  - :doc:`Hashed </core/index-hashed>`
-  - :doc:`Unique </core/index-unique>`
+  - :ref:`2d (Geospatial) <2d-index-internals>`
+  - :ref:`2dsphere (Geospatial) <2dsphere-index>`
+  - :ref:`Hashed <index-type-hashed>`
+  - :ref:`Unique <index-type-unique>`
 
   .. note::
 
