DOCSP-25224 EOL Version Cleanup of mongosh Methods (#1901)
* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 version cleanup in Method Reference

* DOCSP-25224 redirects

* DOCSP-25224 Updates redirects, removes copyDatabase and cloneDatabase as deprecated

* DOCSP-25224 Update for build

* DOCSP-25224 Update for build

* DOCSP-25224 Fixes build errors

* DOCSP-25224 Fixes per Jocelyn

* DOCSP-25224 Fixes per Jocelyn

* DOCSP-25224 Fixes per Jocelyn

* DOCSP-25224 Fixes per Jocelyn

* DOCSP-25224 Fixes per Jocelyn

* DOCS-15377 Fixes per Jocelyn

* DOCSP-25890 adds page-level refs to pages under tutorial/ that have doc directives pointing to them (#2063)

* DOCS-15521 sh.status.partitioned not valid (#2050)

* DOCS-15521 sh.status.partitioned not valid

* DOCS-15521 sh.status.partitioned not valid

* DOCS-15521 sh.status.partitioned not valid

* Review Feedback

* Review feedback

* DOCSP-25339 (#2026)

* add api docs for rewrapmanydatakeys methods

* move to shared include

* broken links

* update product names, add as constants

* (DOCSP-24983) QE Server Side Schema Behavior (#2018)

* wip

* Trigger Build

* proo

--- a/source/includes/extracts-listCollections-auth.yaml
+++ b/source/includes/extracts-listCollections-auth.yaml
@@ -14,7 +14,7 @@ content: |
    The built-in role :authrole:`read` provides the privilege to run
    :dbcommand:`listCollections` for a specific database.
 
-   Starting in version 4.0, however, user without the required privilege
+   Users without the required privilege
    can run the command with **both** ``authorizedCollections`` and
    ``nameOnly`` options set to ``true``. In this case, the command returns
    just the name and type of the collection(s) to which the user has
@@ -48,8 +48,7 @@ content: |
 ref: listCollections-auth-show-collections
 content: |
 
-   Starting in version 4.0 of the ``mongo`` shell, ``show
-   collections`` is equivalent to:
+   The ``mongo`` shell, ``show collections`` is equivalent to:
 
    .. code-block:: javascript
 
@@ -79,8 +78,7 @@ content: |
 ref: listCollections-auth-showCollectionNames
 content: |
 
-   Starting in version 4.0 of the ``mongo`` shell,
-   :method:`db.getCollectionNames()` is equivalent to:
+   The :method:`db.getCollectionNames()` is equivalent to:
 
    .. code-block:: javascript
 
