--- a/source/includes/extracts-syncFrom.yaml
+++ b/source/includes/extracts-syncFrom.yaml
@@ -3,14 +3,9 @@ content: |
    Sync Logic
    ~~~~~~~~~~
 
-   .. versionchanged:: 3.4
-
    If an initial sync operation is in progress when you run
    {{syncfrom}}, {{syncfrom}} stops the in-progress initial sync and
-   restarts the sync process with the new target. In previous versions,
-   if you run {{syncfrom}} during initial sync, MongoDB produces no
-   error messages, but the sync target will not change until after the
-   initial sync operation.
+   restarts the sync process with the new target. 
 
    Only modify the default sync logic as needed, and always exercise
    caution. 
