--- a/source/includes/extracts-zoned-sharding.yaml
+++ b/source/includes/extracts-zoned-sharding.yaml
@@ -114,8 +114,7 @@ content: |
 ref: zoned-sharding-drop-collection-change
 content: |
 
-   Starting in MongoDB 4.0.2, dropping a collection deletes its
-   associated zone/tag ranges.
+   Dropping a collection deletes its associated zone/tag ranges.
 
 ---
 ref: zoned-sharding-compound-hashed-downgrade
