DOCSP-26426 Replaces Compound-GeoJSON doc directives (#2156)

--- a/source/includes/extracts-geojson-specification.yaml
+++ b/source/includes/extracts-geojson-specification.yaml
@@ -43,7 +43,7 @@ content: |
       }
 
    For a list of the GeoJSON objects supported in MongoDB as well as
-   examples, see :doc:`GeoJSON objects </reference/geojson>`.
+   examples, see :ref:`GeoJSON objects <geospatial-indexes-store-geojson>`.
 
    .. include:: /includes/extracts/geojson-specification-query-calculation.rst
 ...
