--- a/source/includes/steps-deploy-geographically-distributed-replica-set-5member.yaml
+++ b/source/includes/steps-deploy-geographically-distributed-replica-set-5member.yaml
@@ -57,7 +57,7 @@ content: |
    Alternatively, you can also specify the :setting:`replica set name
    <replication.replSetName>` and the :setting:`hostnames/ip
    addresses <net.bindIp>` in a
-   :doc:`configuration file </reference/configuration-options>`:
+   :ref:`configuration file <configuration-options>`:
 
    .. code-block:: yaml
 
