--- a/source/includes/steps-run-mongodb-on-osx.yaml
+++ b/source/includes/steps-run-mongodb-on-osx.yaml
@@ -57,7 +57,7 @@ pre: |
   from above, and the ``fork`` parameter to run :binary:`~bin.mongod`
   in the background. Alternatively, you may choose to store the values
   for ``dbpath``, ``logpath``, ``fork``, and many other parameters in a
-  :doc:`configuration file </reference/configuration-options>`.
+  :ref:`configuration file <configuration-options>`.
 action:
   - heading: Run ``mongod`` with command-line parameters
     pre: |
@@ -71,7 +71,7 @@ action:
     pre: |
       Run the :binary:`~bin.mongod` process at the system prompt,
       providing the path to a
-      :doc:`configuration file </reference/configuration-options>`
+      :ref:`configuration file <configuration-options>`
       with the ``config`` parameter:
     language: sh
     code: |
