(DOCSP-26626): Fix mongod/mongos formatting (#2170)

--- a/source/includes/extracts-4.2-changes.yaml
+++ b/source/includes/extracts-4.2-changes.yaml
@@ -411,8 +411,8 @@ content: |
    Starting in version 4.2, MongoDB removes the ``--sslFIPSMode``
    option for |tool-binary|. |tool-binary|
    will use FIPS compliant connections to
-   :binary:`~bin.mongod`/:binary:`~bin.mongos` if the
-   :binary:`~bin.mongod`/:binary:`~bin.mongos` instances are
+   :binary:`mongod` / :binary:`mongos` if the
+   :binary:`mongod` / :binary:`mongos` instances are
    :doc:`configured to use FIPS mode </tutorial/configure-fips>`.
 ---
 ref: 4.2-changes-fips-program-mongod
@@ -440,8 +440,8 @@ content: |
    - :binary:`~bin.mongotop`
 
    The programs will use FIPS compliant connections to
-   :binary:`~bin.mongod`/:binary:`~bin.mongos` if the
-   :binary:`~bin.mongod`/:binary:`~bin.mongos` instances are
+   :binary:`mongod` / :binary:`mongos` if the
+   :binary:`mongod` / :binary:`mongos` instances are
    :doc:`configured to use FIPS mode </tutorial/configure-fips>`.
 ---
 ref: 4.2-changes-count-syntax-validation
@@ -764,7 +764,7 @@ content: |
    
    If the configuration file includes the :configexpansion:`__rest`
    expansion, on Linux/macOS, the read access to the configuration file must be limited
-   to the user running the :binary:`~bin.mongod`/:binary:`~bin.mongos`
+   to the user running the :binary:`mongod` / :binary:`mongos`
    process only.
 ---
 ref: 4.2-changes-expansion-configuration-file-permission-exec
@@ -772,7 +772,7 @@ content: |
    If the configuration file includes the :configexpansion:`__exec`
    expansion, on Linux/macOS, the write access to the configuration file must be
    limited to the user running the
-   :binary:`~bin.mongod`/:binary:`~bin.mongos` process only.
+   :binary:`mongod` / :binary:`mongos` process only.
 ---
 ref: 4.2-changes-ese-key-rollover
 content: |
@@ -811,7 +811,7 @@ content: |
    Starting in MongoDB 4.2, MongoDB adds the parameter
    :parameter:`ShardingTaskExecutorPoolReplicaSetMatching`. This 
    parameter determines the minimum size of the 
-   :binary:`~bin.mongod`/:binary:`~bin.mongos` instance's 
+   :binary:`mongod` / :binary:`mongos` instance's 
    connection pool to each member of the sharded cluster. This value 
    can vary during runtime.
    
