--- a/source/includes/extracts-4.2-changes.yaml
+++ b/source/includes/extracts-4.2-changes.yaml
@@ -499,7 +499,7 @@ content: |
 ref: 4.2-changes-inmem-startup-warning
 content: |
    Starting in version 4.2 (and 4.0.13 and 3.6.14 ), if a replica set
-   member uses the :doc:`in-memory storage engine </core/inmemory>`
+   member uses the :ref:`in-memory storage engine <storage-inmemory>`
    (voting or non-voting) but the replica set has
    :rsconf:`writeConcernMajorityJournalDefault` set to true, the
    replica set member logs a startup warning.
