DOCSP-26661 EOL  cleanup for Index pages. (#2189)
* DOCSP-26661 Fixes references to EOL releases for index pages in source/code

* Fixes EOL version on Query Optimization page

* EOL cleanup on multikey, sparse, and multikey bounds pages

* EOL fixes to index pages

* Removes version reference from include

* Removes text index table

* Removes text index table

--- a/source/includes/extracts-parent-fact-covered-query-sharded-collection.yaml
+++ b/source/includes/extracts-parent-fact-covered-query-sharded-collection.yaml
@@ -1,16 +1,8 @@
 ref: _fact-covered-query-sharded-collection
 content: |
 
-  .. FYI -- we doc this in the negative since this is included
-  .. in the limitation/restriction section.
-  .. We probably could word this in "can only cover ..."
-  .. to make it more positive.
+  When run on :program:`mongos`, indexes can only {{cover}} queries on 
+  :term:`sharded <shard>` collections if the index contains
+  the shard key.
 
-  Starting in MongoDB 3.0, an index cannot {{cover}} a query on a
-  :term:`sharded <shard>` collection when run against a
-  :binary:`~bin.mongos` if the index does not contain the shard key.
-
-  In previous versions, an index cannot :ref:`cover <covered-queries>`
-  a query on a :term:`sharded <shard>` collection when run against a
-  :binary:`~bin.mongos`.
 ...
