(DOCSP-26419): Replace Agg-Collation doc directives (#2174)
* replace doc directives

* fix build and a few outliers

* small fix from copy review

--- a/source/includes/steps-convert-replica-set-enable-sharding.yaml
+++ b/source/includes/steps-convert-replica-set-enable-sharding.yaml
@@ -60,7 +60,7 @@ action:
     code: |
       { "collectionsharded" : "test.test_collection", "ok" : 1 }
 post: |
-   The :doc:`balancer </core/sharding-balancer-administration>` redistributes
+   The :ref:`balancer <sharding-balancing>` redistributes
    chunks of documents when it next runs. As clients insert additional
    documents into this collection, the :binary:`~bin.mongos` routes the
    documents to the appropriate shard.
