--- a/source/includes/extracts-collation.yaml
+++ b/source/includes/extracts-collation.yaml
@@ -5,7 +5,7 @@ content: |
 ---
 ref: collation-description
 content: |
-   :doc:`Collation </reference/collation>` allows users to specify
+   :ref:`Collation <collation>` allows users to specify
    language-specific rules for string comparison, such as rules for
    lettercase and accent marks.
 
