--- a/source/includes/extracts-parent-fact-count-on-sharded-clusters.yaml
+++ b/source/includes/extracts-parent-fact-count-on-sharded-clusters.yaml
@@ -2,7 +2,7 @@ ref: _fact-count-sharded-clusters
 content: |
   On a sharded cluster, {{countOp}} can result in an *inaccurate* count if
   :term:`orphaned documents <orphaned document>` exist or if a
-  :doc:`chunk migration </core/sharding-balancer-administration>` is in progress.
+  :ref:`chunk migration <sharding-balancing>` is in progress.
 
   To avoid these situations, on a sharded cluster, use the
   :method:`db.collection.aggregate()` method:
