--- a/source/includes/steps-3.2-downgrade-sharded-cluster.yaml
+++ b/source/includes/steps-3.2-downgrade-sharded-cluster.yaml
@@ -11,8 +11,8 @@ title: "Check the ``minOpTimeUpdaters`` value."
 level: 4
 ref: 3.2-downgrade-minoptimerecovery
 content: |
-    If the sharded cluster uses :doc:`CSRS
-    </core/sharded-cluster-config-servers>`, for *each* shard, check
+    If the sharded cluster uses :ref:`CSRS
+    <sharding-config-server>`, for *each* shard, check
     the ``minOpTimeUpdaters`` value to see if it is zero. A
     ``minOpTimeUpdaters`` value of zero indicates that there are no
     migrations in progress. A non-zero value indicates either that a
@@ -44,8 +44,8 @@ title: "Prepare CSRS Config Servers for downgrade."
 level: 4
 ref: 3.2-downgrade-csrs
 content: |
-    If the sharded cluster uses :doc:`CSRS
-    </core/sharded-cluster-config-servers>`:
+    If the sharded cluster uses :ref:`CSRS
+    <sharding-config-server>`:
 
     a. :ref:`Remove secondary members from the replica set
        <remove-member-using-reconfig>` to have only a primary and two
@@ -99,13 +99,12 @@ content: |
 
     #. If you are rolling back to MMAPv1:
 
-       a. Start a :doc:`CSRS </core/sharded-cluster-config-servers>` member as
+       a. Start a :ref:`CSRS <sharding-config-server>` member as
           a standalone; i.e. without the :option:`--replSet <mongod --replSet>`
           or, if using a configuration file, :setting:`replication.replSetName`.
 
        #. Run :binary:`~bin.mongodump` to dump the ``config`` database, then
-          shutdown the :doc:`CSRS </core/sharded-cluster-config-servers>`
-          member.
+          shutdown the CSRS member.
 
           .. code-block:: bash
 
