(DOCSP-26418): Replace remaining 2d inline doc directives (#2213)
* replace doc directives

* fix build errors

* small fixes

* tech review feedback

--- a/source/includes/extracts-geonear-facts.yaml
+++ b/source/includes/extracts-geonear-facts.yaml
@@ -21,6 +21,6 @@ content: |
 ---
 ref: geoNear-stage-index-requirement
 content: |
-   :pipeline:`$geoNear` requires a :doc:`geospatial index
-   </core/geospatial-indexes>`.
+   :pipeline:`$geoNear` requires a :ref:`geospatial index
+   <index-feature-geospatial>`.
 ...
