DOCSP-26700 Removes EOL version references from Replication  (#2194)
* DOCSP-26700 Removes EOL version references from Core Replication and Sharding pages

* EOL cleanup

* Fixes EOL mentions in includes

* Fixes EOL mentions in includes

* Fixes text

* Fixes per Ashley

* Fixes per Ashley

* Fixes per Ashley

* Fixes per Ashley

* Fixes per Samy Lanka

--- a/source/includes/extracts-4.2-changes.yaml
+++ b/source/includes/extracts-4.2-changes.yaml
@@ -97,7 +97,7 @@ content: |
 ref: 4.2-changes-slow-oplog-log-message-footnote
 content: |
 
-   Starting in version 4.2 (also available starting in 4.0.6), secondary
+   Starting in version 4.2, secondary
    members of a replica set now :ref:`log oplog entries
    <slow-oplog-application>` that take longer than the slow operation
    threshold to apply. These slow oplog messages:
@@ -116,7 +116,7 @@ content: |
    - May be affected by :setting:`~operationProfiling.slowOpSampleRate`,
      depending on your MongoDB version:
 
-     - In MongoDB 4.2 and earlier, these slow oplog entries are not
+     - In MongoDB 4.2, these slow oplog entries are not
        affected by the :setting:`~operationProfiling.slowOpSampleRate`.
        MongoDB logs all slow oplog entries regardless of the sample rate.
 
