--- a/source/includes/extracts-changestream.yaml
+++ b/source/includes/extracts-changestream.yaml
@@ -181,9 +181,7 @@ content: |
 ref: changestream-disable-rc-majority
 content: |
    
-   Disabling :readconcern:`"majority"` read concern disables support
-   for :doc:`/changeStreams` for MongoDB 4.0 and earlier. For MongoDB
-   4.2+, disabling read concern ``"majority"`` has no effect on change
+   Disabling :readconcern:`"majority"` read concern has no effect on change
    streams availability.
 ---
 ref: changestream-rc-majority-4.2
