--- a/source/includes/steps-change-replica-set-wiredtiger.yaml
+++ b/source/includes/steps-change-replica-set-wiredtiger.yaml
@@ -55,10 +55,9 @@ content: |
 
              .. important::
 
-                If you are running a three-member PSA architecture and
-                MongoDB version 4.0.3+, include
-                :option:`--enableMajorityReadConcern false <mongod
-                --enableMajorityReadConcern>` to disable read concern ``majority``. |seemore|
+                If you are running a three-member PSA architecture, include
+                :option:`--enableMajorityReadConcern false <mongod --enableMajorityReadConcern>` 
+                to disable read concern ``majority``. |seemore|
 
              .. code-block:: bash
 
