--- a/source/includes/extracts-default-bind-ip-security.yaml
+++ b/source/includes/extracts-default-bind-ip-security.yaml
@@ -1,41 +1,37 @@
 ref: default-bind-ip-security-command-line
 content: |
 
-   Starting in MongoDB 3.6, :binary:`~bin.mongod` and :binary:`~bin.mongos`
+   :binary:`~bin.mongod` and :binary:`~bin.mongos`
    bind to localhost by default. If the members of your deployment are
    run on different hosts or if you wish remote clients to connect to
-   your instance, you must specify the ``--bind_ip`` option. For more
-   information, see :ref:`3.6-bind_ip-compatibility`.
+   your instance, you must specify the ``--bind_ip`` option. 
 
 ---
 ref: default-bind-ip-security-config-file
 content: |
 
-   Starting in MongoDB 3.6, :binary:`~bin.mongod` and :binary:`~bin.mongos`
+   :binary:`~bin.mongod` and :binary:`~bin.mongos`
    bind to localhost by default. If the members of your deployment are
    run on different hosts or if you wish remote clients to connect to
    your deployment, you must specify the :setting:`net.bindIp` setting.
-   For more information, see :ref:`3.6-bind_ip-compatibility`.
 ---
 ref: default-bind-ip-security
 content: |
 
-   Starting in MongoDB 3.6, :binary:`~bin.mongod` and :binary:`~bin.mongos`
+   :binary:`~bin.mongod` and :binary:`~bin.mongos`
    bind to localhost by default. If the members of your deployment are
    run on different hosts or if you wish remote clients to connect to
    your deployment, you must specify ``--bind_ip`` or
-   :setting:`net.bindIp`. For more information, see
-   :ref:`3.6-bind_ip-compatibility`.
+   :setting:`net.bindIp`. 
 ---
 ref: default-bind-ip-security-windows
 content: |
 
-   Starting in MongoDB 3.6, :binary:`~bin.mongod.exe` and
+   :binary:`~bin.mongod.exe` and
    :binary:`~bin.mongos.exe` bind to localhost by default. If the members
    of your deployment are run on different hosts or if you wish remote
    clients to connect to your deployment, you must specify
-   ``--bind_ip`` or :setting:`net.bindIp`. For more information, see
-   :ref:`3.6-bind_ip-compatibility`. For more information on the
+   ``--bind_ip`` or :setting:`net.bindIp`. For more information on the
    configuration file, see :doc:`configuration
    options</reference/configuration-options>`.
        
