DOCSP-26477 Replace x.509 - zones and zone ranges (#2277)

--- a/source/includes/steps-clear-jumbo-flag-refine-key.yaml
+++ b/source/includes/steps-clear-jumbo-flag-refine-key.yaml
@@ -81,7 +81,7 @@ content: |
 
    The :dbcommand:`refineCollectionShardKey` command updates the
    :doc:`chunk ranges </core/sharding-data-partitioning>` and
-   :doc:`zone ranges </core/zone-sharding>` to incorporate the new
+   :ref:`zone ranges <zone-sharding>` to incorporate the new
    fields without modifying the range values of the existing key
    fields. That is, the refinement of the shard key does not
    immediately affect the distribution of chunks across shards or
