--- a/snooty.toml
+++ b/snooty.toml
@@ -181,6 +181,7 @@ toc_landing_pages = [
    "/release-notes/5.3",
    "/release-notes/6.0",
    "/release-notes/6.1",
+   "/release-notes/6.2",
    "/replication",
    "/security",
    "/sharding",
@@ -230,7 +231,7 @@ package-name = "mongodb"
 version = "6.2"
 latest-lts-version = "6.0"
 release = "6.0.1"
-version-dev = "6.0"
+version-dev = "6.2"
 pgp-version = "{+version+}"
 rsa-key = "4B7C549A058F8B6B"
 pgp-fingerprint = "E162F504A20CDF15827F718D4B7C549A058F8B6B"
