DOCSP-26443 replace docs directives (#2284)
* DOCSP-26443 replace docs directives

* grammar and capitalization fix

--- a/source/includes/steps-run-mongodb-on-windows.yaml
+++ b/source/includes/steps-run-mongodb-on-windows.yaml
@@ -50,7 +50,7 @@ content: |
      b. Click :guilabel:`Allow access`.
 
      To learn more about security and MongoDB, see the
-     :doc:`Security Documentation </security>`.
+     :ref:`Security Documentation <security>`.
 ---
 title: Connect to MongoDB.
 stepnum: 3
