DOCSP-26448 Replace Text Indexes-YAML Docs (#2292)
* DOCSP-26448 replace docs

* fix broken ref

* fix another broken ref

* removed extra link

--- a/source/includes/steps-3.2-downgrade-sharded-cluster-sccc.yaml
+++ b/source/includes/steps-3.2-downgrade-sharded-cluster-sccc.yaml
@@ -38,7 +38,7 @@ content: |
 
     Downgrade first ``confserver3``, then ``confserver2``, and lastly,
     ``confserver1``. If your :binary:`~bin.mongod` instance is using the
-    :doc:`WiredTiger </core/wiredtiger>` storage engine, you must
+    :ref:`WiredTiger <storage-wiredtiger>` storage engine, you must
     include the :option:`--storageEngine <mongod --storageEngine>` option (or
     :setting:`storage.engine` if using the configuration file) with the
     3.0 binary.
