--- a/source/includes/steps-3.2-downgrade-sharded-cluster.yaml
+++ b/source/includes/steps-3.2-downgrade-sharded-cluster.yaml
@@ -239,7 +239,7 @@ content: |
 
   For each replica set shard, downgrade the :binary:`~bin.mongod` binaries
   and restart. If your :binary:`~bin.mongod` instance is using the
-  :doc:`WiredTiger </core/wiredtiger>` storage engine, you must include
+  :ref:`WiredTiger <storage-wiredtiger>` storage engine, you must include
   the :option:`--storageEngine <mongod --storageEngine>` option (or :setting:`storage.engine` if
   using the configuration file) with the 3.0 binary.
 
