DOCSP-26476 user-defined roles - writes doc directive replacements (#2298)

--- a/source/includes/steps-authorization-create-users.yaml
+++ b/source/includes/steps-authorization-create-users.yaml
@@ -67,8 +67,8 @@ pre: |
 
   After authenticating as the user administrator, use the
   :method:`db.createUser()` method to create additional users. You can assign
-  any :doc:`built-in roles </reference/built-in-roles>` or
-  :doc:`user-defined roles </core/security-user-defined-roles>` to the
+  any :ref:`built-in roles <built-in-roles>` or
+  :ref:`user-defined roles <user-defined-roles>` to the
   users.
 
 action:
