(DOCSP-26780): Make reference a landing page and alphabetize subpages (#2371)
* (DOCSP-26780): Make reference a landing page and alphabetize subpages

* (DOCSP-26760): improvements

* fix refs

--- a/snooty.toml
+++ b/snooty.toml
@@ -102,6 +102,7 @@ toc_landing_pages = [
    "/indexes",
    "/introduction",
    "/mongo",
+   "/reference",
    "/reference/aggregation",
    "/reference/bson-types",
    "/reference/change-events",
