--- a/source/includes/extracts-atlas-search-facts.yaml
+++ b/source/includes/extracts-atlas-search-facts.yaml
@@ -1,10 +1,12 @@
 ref: fact-text-search-legacy-atlas
 content: |
 
-  MongoDB offers a :atlas:`full-text search solution, MongoDB Atlas
-  Search </atlas-search/>`, for data hosted on :atlas:`MongoDB Atlas
-  </>`. Users running self-managed MongoDB deployments have access to
-  on-premises text search capabilities. 
+  .. note::
+  
+     This page describes text search capabilities for self-managed
+     (non-Atlas) deployments. For data hosted on MongoDB Atlas, MongoDB
+     offers an improved full-text search solution, :atlas:`Atlas Search
+     </atlas-search/>`.
 
 ---
 ref: fact-regex-search-legacy-atlas
