--- a/source/includes/extracts-fact-query-bitwise.yaml
+++ b/source/includes/extracts-fact-query-bitwise.yaml
@@ -139,7 +139,7 @@ content: |
 
   .. code-block:: javascript
 
-     db.collection.save({ x: BinData(0, "ww=="), binaryValueofA: "11000011" })
+     db.collection.insertOne({ x: BinData(0, "ww=="), binaryValueofA: "11000011" })
 
   :query:`{{op}}` will consider all bits outside of ``x`` to be clear.
 ---
@@ -177,10 +177,12 @@ content: |
 
   .. code-block:: javascript
 
-     db.collection.save({ _id: 1, a: 54, binaryValueofA: "00110110" })
-     db.collection.save({ _id: 2, a: 20, binaryValueofA: "00010100" })
-     db.collection.save({ _id: 3, a: 20.0, binaryValueofA: "00010100" })
-     db.collection.save({ _id: 4, a: BinData(0, "Zg=="), binaryValueofA: "01100110" })
+     db.collection.insertMany([
+       { _id: 1, a: 54, binaryValueofA: "00110110" },
+       { _id: 2, a: 20, binaryValueofA: "00010100" },
+       { _id: 3, a: 20.0, binaryValueofA: "00010100" },
+       { _id: 4, a: BinData(0, "Zg=="), binaryValueofA: "01100110" }
+     ])
 ---
 ref: _fact-query-bitwise-indexes
 content: |
