DOCSP-26472 replace shard server - sparse: true doc directives (#2430)

--- a/source/includes/extracts-wildcard-indexes.yaml
+++ b/source/includes/extracts-wildcard-indexes.yaml
@@ -103,7 +103,7 @@ ref: wildcard-index-restrictions-query-patterns
 content: |
 
   Field does **not** exist
-    Wildcard indexes are :doc:`sparse </core/index-sparse>` and do
+    Wildcard indexes are :ref:`sparse <index-type-sparse>` and do
     not index empty fields. Wildcard indexes therefore cannot support 
     querying for documents where a field does **not** exist.
 
