DOCSP-27291 EOL Version Cleanup for Programs (#2341)
* DOCSP-27291 Removes EOL version references from Server packagec omponents

* EOL cleanup for mongos

* Removes 3.2-only option

* Fixes spelling issue s/de-crypt/decrypt/g

* Fixes spelling issue s/de-crypt/decrypt/g

* Reworks version substitution for mongos open

* Fixes stray version references

* Removes additional EOL references from mongos

* Fixes stay EOL references in mongod

* Fixes version reference in mongoldap

* Fixes per Kyle Suarez

--- a/source/includes/extracts-4.2-changes.yaml
+++ b/source/includes/extracts-4.2-changes.yaml
@@ -223,8 +223,7 @@ content: |
 ref: 4.2-changes-options-tlsClusterCAFile
 content: |
    MongoDB adds
-   |tlsClusterCAFile|/:setting:`net.tls.clusterCAFile`. (Also available
-   in 3.4.18+, 3.6.9+, 4.0.3+)
+   |tlsClusterCAFile|/:setting:`net.tls.clusterCAFile`. 
 ---
 ref: 4.2-changes-options-tls-ssl-upgrade
 content: |
