--- a/source/includes/extracts-ssl-facts.yaml
+++ b/source/includes/extracts-ssl-facts.yaml
@@ -13,7 +13,7 @@ content: |
 ref: ssl-facts-ca-file
 content: |
 
-   Starting in version 3.4, if ``--tlsCAFile``/``net.tls.CAFile`` (or
+   If ``--tlsCAFile``/``net.tls.CAFile`` (or
    their aliases ``--sslCAFile``/``net.ssl.CAFile``) is not specified
    and you are not using x.509 authentication, the system-wide CA
    certificate store will be used when connecting to an TLS/SSL-enabled
