--- a/snooty.toml
+++ b/snooty.toml
@@ -230,6 +230,7 @@ package-name-enterprise = "mongodb-enterprise"
 package-name = "mongodb"
 version = "6.1"
 latest-lts-version = "6.0"
+last-supported-version = "4.2"
 release = "6.1.1"
 version-dev = "6.1"
 pgp-version = "{+version+}"
